--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
   <body>
     <main class="main" id="main">
       <header class="header">
-        <i class="ph ph-user-circle" style="color: white;"></i>
         <i class="ph ph-list" style="color: white;"></i>
-        <i class="ph-fill ph-heart" style="color: white;"></i>
+        <div>
+          <i class="ph-fill ph-heart" style="color: white;"></i>
+          <i class="ph ph-user-circle" style="color: white;"></i>
+        </div>
       </header>
       <nav class="nav">
         <button onclick="getMoviesList('popular')" class="btn-default btn-selected">Populares</button>
