Melhoria na lógica e funcionalidades dos botões

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <main class="main" id="main">
       <header class="header">
-        <i class="ph ph-magnifying-glass" style="color: white"></i>
+        <!-- <i class="ph ph-magnifying-glass" style="color: white"></i>
         <i class="ph ph-list" style="color: white"></i>
         <div>
           <a href="./pages/favorites/favorites.html">
@@ -35,7 +35,7 @@
           <a href="./pages/profile/profile.html">
             <i class="ph ph-user-circle" style="color: white"></i>
           </a>
-        </div>
+        </div> -->
       </header>
       <nav class="nav">
         <button
@@ -63,7 +63,7 @@
           title="Adicionar aos meus favoritos"
           id="add_to_favorites"
         >
-          <i class="ph ph-thumbs-up" style="color: white; font-size: 24px"></i>
+          <i class="ph ph-heart" style="color: white; font-size: 24px"></i>
         </button>
         <button
           class="movie_about__btn btn-default"
@@ -72,7 +72,7 @@
           id="remove_from_favorites"
         >
           <i
-            class="ph-fill ph-thumbs-up"
+            class="ph-fill ph-heart"
             style="color: white; font-size: 24px"
           ></i>
         </button>
