--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
       <footer class="footer">
         <p>Projeto Final Javascript - Desenvolvido por Lucas Brittos</p>
       </footer>
+      <div class="loading">
+        <div class="spinner"></div>
+      </div>
     </main>
     <script src="./src/scripts/index.js"></script>
   </body>
