--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <input
             type="text"
             class="search_text"
-            id="search_text"
+            id="search_text_mobile"
             name="search_text"
             placeholder="Pesquisar filme"
             onkeypress="handleSearchMovie(event)"
