--- a/index.html
+++ b/index.html
@@ -58,108 +58,111 @@
         <i class="ph ph-list" id="menu-icon" style="color: white" onclick="openMenu()"></i>
       </header>
 
-      <!-- Botões de seleção e navegação -->
-      <nav class="nav">
-        <button
-          onclick="getMoviesList('popular')"
-          class="btn-default d-flex"
-          id="popular"
-        >
-          Populares
-        </button>
-        <button
-          onclick="getMoviesList('top_rated')"
-          class="btn-default d-flex"
-          id="top_rated"
-        >
-          Melhores avaliados
-        </button>
-        <button
-          onclick="getMoviesList('now_playing')"
-          class="btn-default d-flex"
-          id="now_playing"
-        >
-          Em cartaz
-        </button>
-        <button
-          onclick="getMoviesList('upcoming')"
-          class="btn-default d-flex"
-          id="upcoming"
-        >
-          Em breve
-        </button>
-        <button class="btn-default btn-selected d-none" id="favorites">
-          Favoritos
-          <i
-            class="ph ph-x"
-            style="color: white; font-size: 16px"
-            onclick="restart()"
-          ></i>
-        </button>
-        <button class="btn-default btn-selected d-none" id="must_watch">
-          Quero assistir
-          <i
-            class="ph ph-x"
-            style="color: white; font-size: 16px"
-            onclick="restart()"
-          ></i>
-        </button>
-        <button class="btn-default btn-selected" id="btn_search_movie">
-          <span></span>
-          <i
-            class="ph ph-x"
-            style="color: white; font-size: 16px"
-            onclick="restart()"
-          ></i>
-        </button>
-      </nav>
+      <div class="content">
+        <!-- Botões de seleção e navegação -->
+        <nav class="nav">
+          <button
+            onclick="getMoviesList('popular')"
+            class="btn-default d-flex"
+            id="popular"
+          >
+            Populares
+          </button>
+          <button
+            onclick="getMoviesList('top_rated')"
+            class="btn-default d-flex"
+            id="top_rated"
+          >
+            Melhores avaliados
+          </button>
+          <button
+            onclick="getMoviesList('now_playing')"
+            class="btn-default d-flex"
+            id="now_playing"
+          >
+            Em cartaz
+          </button>
+          <button
+            onclick="getMoviesList('upcoming')"
+            class="btn-default d-flex"
+            id="upcoming"
+          >
+            Em breve
+          </button>
+          <button class="btn-default btn-selected d-none" id="favorites">
+            Favoritos
+            <i
+              class="ph ph-x"
+              style="color: white; font-size: 16px"
+              onclick="restart()"
+            ></i>
+          </button>
+          <button class="btn-default btn-selected d-none" id="must_watch">
+            Quero assistir
+            <i
+              class="ph ph-x"
+              style="color: white; font-size: 16px"
+              onclick="restart()"
+            ></i>
+          </button>
+          <button class="btn-default btn-selected" id="btn_search_movie">
+            <span></span>
+            <i
+              class="ph ph-x"
+              style="color: white; font-size: 16px"
+              onclick="restart()"
+            ></i>
+          </button>
+        </nav>
 
-      <!-- Exibição das informações do filme selecionado - visível apenas em desktop/telas maiores -->
-      <section class="movie_about">
-        <h1 class="movie_about__title"></h1>
-        <p class="movie_about__description"></p>
-        <button
-          class="movie_about__btn btn-default"
-          onclick="addToFavorites()"
-          title="Adicionar aos meus favoritos"
-          id="add_to_favorites"
-        >
-          <i class="ph ph-heart" style="color: white; font-size: 24px"></i>
-        </button>
-        <button
-          class="movie_about__btn btn-default"
-          onclick="removeFromFavorites()"
-          title="Nos meus favoritos"
-          id="remove_from_favorites"
-        >
-          <i class="ph-fill ph-heart" style="color: white; font-size: 24px"></i>
-        </button>
-        <button
-          class="movie_about__btn btn-default"
-          onclick="addToMustWatch()"
-          title="Quero assistir"
-          id="add_to_watch"
-        >
-          <i class="ph ph-list-plus" style="color: white; font-size: 24px"></i>
-        </button>
-        <button
-          class="movie_about__btn btn-default"
-          onclick="removeFromMustWatch()"
-          title="Na lista para assistir"
-          id="remove_from_watch"
-        >
-          <i
-            class="ph ph-list-checks"
-            style="color: white; font-size: 24px"
-          ></i>
-        </button>
-      </section>
+        <!-- Exibição das informações do filme selecionado - visível apenas em desktop/telas maiores -->
+        <section class="movie_about">
+          <h1 class="movie_about__title"></h1>
+          <p class="movie_about__description"></p>
+          <div class="fav_link">
+          <button
+            class="movie_about__btn btn-default"
+            onclick="addToFavorites()"
+            title="Adicionar aos meus favoritos"
+            id="add_to_favorites"
+          >
+            <i class="ph ph-heart" style="color: white; font-size: 24px"></i>
+          </button>
+          <button
+            class="movie_about__btn btn-default"
+            onclick="removeFromFavorites()"
+            title="Nos meus favoritos"
+            id="remove_from_favorites"
+          >
+            <i class="ph-fill ph-heart" style="color: white; font-size: 24px"></i>
+          </button>
+          <button
+            class="movie_about__btn btn-default"
+            onclick="addToMustWatch()"
+            title="Quero assistir"
+            id="add_to_watch"
+          >
+            <i class="ph ph-list-plus" style="color: white; font-size: 24px"></i>
+          </button>
+          <button
+            class="movie_about__btn btn-default"
+            onclick="removeFromMustWatch()"
+            title="Na lista para assistir"
+            id="remove_from_watch"
+          >
+            <i
+              class="ph ph-list-checks"
+              style="color: white; font-size: 24px"
+            ></i>
+          </button>
+        </div>
+        </section>
 
-      <!-- Exibição dos filmes nas listas selecionadas -->
-      <section class="movie_list"></section>
+        <!-- Exibição dos filmes nas listas selecionadas -->
+        <section class="movie_list"></section>
 
-      <p class="no-data d-none">Não encontramos nada por aqui :/</p>
-
+        <p class="no-data d-none">Não encontramos nada por aqui :/</p>
+      </div>
       <!-- Footer -->
       <footer class="footer">
         <p>Projeto Final Javascript - Desenvolvido por Lucas Brittos</p>
