Implementa toast notify

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./src/styles/main.css" />
   </head>
   <body>
@@ -207,6 +208,7 @@
           <span>Quero assistir</span>
       </div>
     </main>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./src/scripts/index.js"></script>
   </body>
 </html>
